# invoiceflow

./: .env.example  .gitignore  CLAUDE.agents.md  DEPLOY.md  Dockerfile  PROJECT_MANIFEST.md  Procfile  README.md  check_deploy.py  nixpacks.toml  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml  start.sh
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: app.ts  config.ts  db.ts  index.ts  redis.ts
apps/api/src/modules/ai-assistant/: ai.routes.ts  ai.service.ts
apps/api/src/modules/auth/: auth.routes.ts  auth.schema.ts  auth.service.ts
apps/api/src/modules/billing/: billing.routes.ts  (+3 more)
apps/api/src/shared/: errors.ts  jwt-auth.hook.ts
apps/web/: .dockerignore  Dockerfile  next.config.ts  package.json  railway.toml  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts  auth.ts
brand/: brand-book.md  design-system.md  wireframes.md
engineering/: api-spec.md  architecture.md  billing.md
growth/: gtm.md  launch.md
invoiceflow/: __init__.py  auth.py  billing.py  config.py  db.py  email_inbound.py  extractor.py  main.py  models.py  processor.py  share.py  sheets.py  startup.py  ticket_extractor.py  ticket_request.py  vat.py
legal/: compliance.md  tos-privacy.md
prompts/: prompt-b3-engineer.md  prompt-b4-backend.md  prompt-b5-wireframes.md  prompt-b6-billing.md  prompt-b7-growth.md  prompt-b8-legal.md  prompt-b9-launch.md
static/: manifest.json  sw.js
templates/: capture.html  dashboard.html  gestor.html  login.html  pricing.html  vat_dashboard.html
(+26 files in other folders)
